--- a/src/_includes/layouts/base.liquid
+++ b/src/_includes/layouts/base.liquid
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    {% include "partials/header.liquid" %}
     {{ content }}
+    {% include "partials/footer.liquid" %}
   </body>
 </html>
