--- a/src/_includes/layouts/module.liquid
+++ b/src/_includes/layouts/module.liquid
@@ -2,11 +2,11 @@
 layout: layouts/base.liquid
 ---
 
-<header>
+<section>
   <a href="/module">← Alle Module</a>
   <h1>{{ title }}</h1>
   <img src="{{ hero_image_url }}" alt="{{ hero_image_alt }}">
-</header>
+</section>
 
 <main>
   {{ content }}
