style: add Tailwind setup
The `prose` class on the body is just for some initial styling. We might wanna use that more selectively.

The `dev:css` script leverages the official Tailwind CLI, it runs alongside Eleventy. CSS output is therefore not handled by Eleventy.

--- a/src/_includes/layouts/base.liquid
+++ b/src/_includes/layouts/base.liquid
@@ -8,9 +8,11 @@
 
     {% include "partials/meta.liquid" %}
 
+    <link rel="stylesheet" href="/style.css" />
+
   </head>
 
-  <body>
+  <body class="prose">
     {% include "partials/header.liquid" %}
     {{ content }}
     {% include "partials/footer.liquid" %}
