feat(SAMS-39): add quotes

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -56,5 +56,9 @@ layout: /layouts/base.liquid
   <h2>In der Praxis: Die Pilot-Schulung 2021</h2>
   <p>Die Weiterbildung xxx  ist ein vom CityLab durchgeführtes Pilotprojekt. 16 Mitarbeiter:innen der Berliner Senats- und Bezirksverwaltung haben an realen Verwaltungsprozessen die Prinzipien und Werkzeuge der nutzerzentrierten Prozessgestaltung erlernt.</p>
   <h3>O-Töne unserer Teilnehmer:innen</h3>
-  <ul></ul>
+  <ul>
+    {% for quote in quotes %}
+      <li>"{{ quote }}"</li>
+    {% endfor %}
+  </ul>
 </aside>
