Changes with dennis
Co-authored-by: Dennis Ostendorf <dnsos@users.noreply.github.com>

--- a/src/_includes/layouts/base.liquid
+++ b/src/_includes/layouts/base.liquid
@@ -12,7 +12,7 @@
 
   </head>
 
-  <body class="prose">
+  <body>
     {% include "partials/header.liquid" %}
     {{ content }}
     {% include "partials/footer.liquid" %}
