style(SAMS-29): style homepage hero section
Note: It's still missing the correct hero image

--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -1,7 +1,16 @@
-<section class="bg-blue-500">
-  <h1>{{ heroTitle }}</h1>
-  <h2>So machen Sie Ihr Team fit für die Zukunft</h2>
-  <p>Digitale, agile und nutzer:innen-orientierte Prozesse sind wesentlich für den anstehenden Wandel in allen Bereichen des öffentlichen Lebens. Mit der Weiterbildung xxx geben wir auf diese Herausforderung eine konkrete und umsetzbare Antwort. Lassen Sie sich inspirieren.</p>
-  <a href="/module">Direkt zu den Modulen</a>
-  <a href="#intro">Mehr Informationen</a>
+<section class="bg-blue-500 py-14 px-4 sm:px-8">
+  <div class="max-w-screen-lg mx-auto flex flex-row-reverse md:grid gap-4 sm:gap-6 md:gap-10 grid-cols-2 items-start md:items-center">
+    <div class="flex justify-center w-20 sm:w-28 md:w-auto flex-shrink-0">
+      <img src="/assets/images/modules/01_hero.png" alt="Placeholder TODO: change image">
+    </div>
+    <div>
+      <h1 class="text-white text-3xl leading-none md:text-4xl lg:text-[40px] font-bold">In <em class="text-magenta-500 not-italic">8 Modulen</em> zur agilen Behörden&shy;arbeit</h1>
+      <h2 class="mt-2 text-blue-200 text-base md:text-lg lg:text-xl">So machen Sie Ihr Team fit für die Zukunft</h2>
+      <p class="mt-4 text-white text-base md:text-lg lg:text-xl">Digitale, agile und nutzer:innen-orientierte Prozesse sind wesentlich für den anstehenden Wandel in allen Bereichen des öffentlichen Lebens. Mit der Weiterbildung xxx geben wir auf diese Herausforderung eine konkrete und umsetzbare Antwort. Lassen Sie sich inspirieren.</p>
+      <div class="mt-8 w-max grid grid-cols-1 gap-3">
+        <a href="/module" class="px-3 pt-1 pb-1 md:pb-2 bg-magenta-500 text-white text-base md:text-lg lg:text-xl text-center transition-colors hover:bg-magenta-400 focus:ring-white">Direkt zu den Modulen</a>
+        <a href="#intro" class="px-3 pt-1 pb-1 md:pb-2 bg-white text-base md:text-lg lg:text-xl text-center transition-colors hover:text-magenta-500">Mehr Informationen</a>
+      </div>
+    </div>
+  </div>
 </section>
