--- a/src/index.liquid
+++ b/src/index.liquid
@@ -2,7 +2,7 @@
 layout: /layouts/base.liquid
 ---
 
-{% include "partials/home_hero.liquid" heroTitle: "In 8 Modulen zur agilen Behördenarbeit" %}
+{% include "partials/home_hero.liquid" %}
 
 <main id="intro">
   <div>
