--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -4,7 +4,7 @@
       <img src="/assets/images/modules/01_hero.png" alt="Placeholder TODO: change image">
     </div>
     <div>
-      <h1 class="text-white text-3xl leading-none md:text-4xl lg:text-[40px] font-bold">In <em class="text-magenta-500 not-italic">8 Modulen</em> zur agilen Behörden&shy;arbeit</h1>
+      <h1 class="text-white text-3xl leading-none md:text-4xl lg:text-[40px] font-bold" aria-label="In 8 Modulen zur agilen Behördenarbeit">In <em class="text-magenta-500 not-italic">8 Modulen</em> zur agilen Behörden&shy;arbeit</h1>
       <h2 class="mt-2 text-blue-200 text-base md:text-lg lg:text-xl">So machen Sie Ihr Team fit für die Zukunft</h2>
       <p class="mt-4 text-white text-base md:text-lg lg:text-xl">Digitale, agile und nutzer:innen-orientierte Prozesse sind wesentlich für den anstehenden Wandel in allen Bereichen des öffentlichen Lebens. Mit der Weiterbildung xxx geben wir auf diese Herausforderung eine konkrete und umsetzbare Antwort. Lassen Sie sich inspirieren.</p>
       <div class="mt-8 w-max grid grid-cols-1 gap-3">
