--- a/src/_includes/partials/moderne_verwaltung.liquid
+++ b/src/_includes/partials/moderne_verwaltung.liquid
@@ -1,4 +1,4 @@
-<div class="container px-4 mx-auto py-6 sm:py-8 md:py-16">
+<div class="container px-4 py-6 sm:py-8 md:py-16">
   {% include 'partials/heading.liquid' content: 'Herausforderungen für eine
   moderne Verwaltung' class: 'pb-3 sm:pb-5 md:pb-8' %}
   <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 md:gap-6">
