--- a/src/_includes/partials/header.liquid
+++ b/src/_includes/partials/header.liquid
@@ -1,5 +1,5 @@
 <header
-  class="sticky top-0 w-screen bg-blue-500 text-white border-b border-blue-300 pt-3 pb-4"
+  class="sticky z-10 top-0 w-screen bg-blue-500 text-white border-b border-blue-300 pt-3 pb-4"
 >
   <section class="px-4 container flex justify-between items-center">
     <a
