--- a/src/_includes/partials/herausforderung.liquid
+++ b/src/_includes/partials/herausforderung.liquid
@@ -1,4 +1,4 @@
-<li class="bg-blue-50 p-4 relative">
+<li class="bg-blue-50 bg-opacity-50 p-4 sm:p-6 md:p-8 relative">
   <div class="absolute top-0 right-0" aria-hidden="true">
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -10,7 +10,7 @@
       <polygon points="0 0 32 0 32 32" fill="currentColor" stroke-width="0" />
     </svg>
   </div>
-  <h4 class="text-magenta-500 font-bold leading-tight mb-2 text-l">
+  <h4 class="text-magenta-500 font-bold leading-tight mb-2 text-lg">
     {{ title }}
   </h4>
   {{ content }}
