--- a/src/_includes/partials/moderne_verwaltung.liquid
+++ b/src/_includes/partials/moderne_verwaltung.liquid
@@ -1,7 +1,9 @@
 <div class="container px-4 py-6 sm:py-8 md:py-16">
   {% include 'partials/heading.liquid' content: 'Herausforderungen für eine
   moderne Verwaltung' class: 'pb-3 sm:pb-5 md:pb-8' %}
-  <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 md:gap-6">
+  <ul
+    class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 md:gap-8 lg:gap-12"
+  >
     {% include 'partials/herausforderung.liquid' title: 'Transformation in allen
     Bereichen des öffentlichen Lebens' content: ' Digitale, agile und
     nutzer:innen-orientierte Prozesse sind wesentlich für den anstehenden Wandel
