--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -1,5 +1,5 @@
 <section class="bg-blue-500 py-14 px-4 sm:px-8">
-  <div class="max-w-screen-lg mx-auto flex flex-row-reverse md:grid gap-4 sm:gap-6 md:gap-10 grid-cols-2 items-start md:items-center">
+  <div class="container flex flex-row-reverse md:grid gap-4 sm:gap-6 md:gap-10 md:grid-cols-2 items-start md:items-center">
     <div class="flex justify-center w-20 sm:w-28 md:w-auto flex-shrink-0">
       <img src="/assets/images/modules/01_hero.png" alt="Placeholder TODO: change image">
     </div>
