--- a/src/index.liquid
+++ b/src/index.liquid
@@ -5,20 +5,7 @@ layout: /layouts/base.liquid
 {% include "partials/home_hero.liquid" %}
 
 <main id="intro">
-  <div>
-    <h2>Einführung</h2>
-    <p>
-      Mitarbeiter:innen der Verwaltung sind heute oft ausführendes Organ des
-      Innovationsbestrebens und -drucks der öffentlichen Hand: Prozesse werden
-      umgestaltet und digitalisiert; es gilt nach Außen diverse Zielgruppen
-      anzusprechen und intern fach- und behördenübergreifend zusammenzuarbeiten.
-      Das benötigt Know-How und Methodenwissen.
-    </p>
-    <p>
-      Die Weiterbildung ist eine Möglichkeit, dieses Wissen zu erwerben und wird
-      hier in einem konzentrierten Überblick vorgestellt.
-    </p>
-  </div>
+  {% include 'partials/introduction.liquid' %}
 
   {% include 'partials/moderne_verwaltung.liquid' %}
   <br />
