feat(service-design): Add service design block with styles

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -21,47 +21,8 @@ layout: /layouts/base.liquid
   </div>
 
   {% include 'partials/moderne_verwaltung.liquid' %}
-
-  <div>
-    <h2>Service Design als Lösung</h2>
-    <p>
-      Service Design arbeitet auf Grundlage des NutzerInnenerlebnisses - denn
-      niemand kann besser Auskunft geben als die Personen, die einen Service von
-      Anfang bis Ende mit echten Bedürfnissen oder auch Handicaps durchlaufen.
-      Dies ist für keine Institution wichtiger als für Verwaltung. Sie hat die
-      größte und vielfältigste Zielgruppe, die zudem darauf angewiesen ist, die
-      angebotenen Dienstleistungen zu nutzen.
-    </p>
-    <p>
-      Service Design ist eine junge, oft noch unbekannte Designdisziplin. Wie
-      der Name sagt, gestaltet Service Design Prozesse und Dienstleistungen und
-      damit im Grunde jede ganzheitliche Erfahrung, die wir machen, wenn wir
-      einem Angebot der privaten oder öffentlichen Hand begegnen.
-    </p>
-    <p>
-      Die Arbeitsweise Service Design ist durch das Zusammenwirken ihrer
-      Methoden und die entstehende Dramaturgie automatisch agil.
-    </p>
-    <details>
-      <summary>Umsetzung in dieser Weiterbildung</summary>
-      <div>
-        <p>
-          xxx setzt bei diesem Dilemma an und führt Führungskräfte wie auch
-          Verwaltungsmitarbeiter:innen in die Methode Service-Design ein.
-        </p>
-        <p>
-          Die Weiterbildung basiert auf dem Train-the-Trainer-Ansatz und
-          befähigt dazu, die Werkzeuge nutzen und auch an Mitarbeiter:innen
-          vermitteln zu können um Nutzerzentriertheit in die Behördenarbeit
-          einzuführen.
-        </p>
-        <p>
-          Jedes Modul beinhaltete einen erläuternden Überbau, angewandte
-          Beispiele sowie Arbeits- und Hintergrundmaterial.
-        </p>
-      </div>
-    </details>
-  </div>
+  <br />
+  {% include 'partials/service-design.liquid' %}
 </main>
 
 <section>
