--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -1,6 +1,6 @@
 <div class="container sm:px-4 py-6 sm:py-8 md:py-16">
   <div
-    class="bg-blue-500 relative text-white px-8 p-4 pt-8 sm:p-6 md:p-8 sm:px-6 md:px-8 pb-24 bg-right-bottom bg-no-repeat sm:text-lg md:text-xl bg-[url(/assets/images/buildings.webp)] bg-[length:100px_auto] lg:bg-auto"
+    class="bg-blue-500 relative text-white px-8 p-4 pt-8 md:p-8 pb-24 bg-right-bottom bg-no-repeat sm:text-lg md:text-xl bg-[url(/assets/images/buildings.webp)] bg-[length:100px_auto] lg:bg-auto"
   >
     <header
       class="flex flex-col-reverse gap-6 sm:flex-row justify-between sm:items-center mb-4 sm:mb-6 md:mb-8"
@@ -39,31 +39,46 @@
       </p>
     </div>
   </div>
-  <details
-    class="bg-blue-500 text-white px-4 sm:px-6 md:px-8 border-t border-blue-300"
-  >
+  <details class="border-t border-blue-300 group">
     <summary
-      class="pb-3.5 sm:pb-4 md:pb-5 pt-2 md:pt-3 sm:text-xl md:text-2xl underline underline-offset-1"
+      class="bg-blue-500 text-white px-8 py-3 sm:py-4 md:py-5 sm:text-xl md:text-2xl list-none flex justify-between items-center"
     >
-      Umsetzung in dieser Weiterbildung
+      <span class="underline underline-offset-1 leading-5 pb-1 sm:pb-3"
+        >Umsetzung in dieser Weiterbildung</span
+      >
+      <span class="w-6 h-6">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          class="rotate-0 group-open:-rotate-180 scale-75 transition-transform will-change-transform"
+        >
+          <polygon
+            fill="#FFF"
+            points="10.485 0 13.515 0 13.515 18.182 21.848 9.848 24 12 12 24 0 12 2.152 9.848 10.485 18.182"
+          />
+        </svg>
+      </span>
     </summary>
-    <div
-      class="pb-4 sm:pb-5 md:pb-6 grid grid-cols-1 sm:grid-cols-3 gap-2 sm:gap-3 md:gap-4"
-    >
-      <p>
-        xxx setzt bei diesem Dilemma an und führt Führungskräfte wie auch
-        Verwaltungs&shy;mit&shy;arbeiter&shy;:innen in die Methode
-        Service-Design ein.
-      </p>
-      <p>
-        Die Weiterbildung basiert auf dem Train-the-Trainer-Ansatz und befähigt
-        dazu, die Werkzeuge nutzen und auch an Mitarbeiter:innen vermitteln zu
-        können um Nutzerzentriertheit in die Behördenarbeit einzuführen.
-      </p>
-      <p>
-        Jedes Modul beinhaltete einen erläuternden Überbau, angewandte Beispiele
-        sowie Arbeits- und Hintergrundmaterial.
-      </p>
+    <div class="bg-blue-50 bg-opacity-50 p-8">
+      <div class="prose text-blue-500">
+        <p>
+          xxx setzt bei diesem Dilemma an und führt Führungskräfte wie auch
+          Verwaltungs&shy;mit&shy;arbeiter&shy;:innen in die Methode
+          Service-Design ein.
+        </p>
+        <p>
+          Die Weiterbildung basiert auf dem Train-the-Trainer-Ansatz und
+          befähigt dazu, die Werkzeuge nutzen und auch an Mitarbeiter:innen
+          vermitteln zu können um Nutzerzentriertheit in die Behördenarbeit
+          einzuführen.
+        </p>
+        <p>
+          Jedes Modul beinhaltete einen erläuternden Überbau, angewandte
+          Beispiele sowie Arbeits- und Hintergrundmaterial.
+        </p>
+      </div>
     </div>
   </details>
 </div>
