--- a/src/_includes/partials/introduction.liquid
+++ b/src/_includes/partials/introduction.liquid
@@ -1,5 +1,7 @@
-<div class="mt-16 px-4 container grid grid-cols-1 md:grid-cols-12 gap-4">
-  <div class="md:col-span-4">
+<div
+  class="mt-16 px-4 container grid grid-cols-1 md:grid-cols-12 gap-5 md:gap-8 lg:items-center"
+>
+  <div class="md:col-span-5 lg:col-span-4">
     {% include 'partials/heading.liquid' content: 'Einführung' class: 'pb-3
     sm:pb-5' %}
     <p>
@@ -14,7 +16,22 @@
       hier in einem konzentrierten Überblick vorgestellt.
     </p>
   </div>
-  <div class="order-first md:order-last md:col-span-8">
-    Video
+  <div
+    class="order-first md:order-last md:col-span-7 lg:col-span-6 lg:col-start-6"
+  >
+    <video controls class="aspect-video w-full border-4 border-blue-500">
+      <source src="service-agentinnen.mp4" type="video/mp4" />
+      <p>
+        Leider unterstützt dein Browser keine Videoinhalte. Hier geht es zum
+        <a href="service-agentinnen.mp4">Video als Datei</a>.
+      </p>
+    </video>
+    <div class="bg-blue-50 bg-opacity-50 py-3 px-4">
+      <p class="italic max-w-prose">
+        Dr. Benjamin Seibel stellt das Konzept der Service:Agent:innen-Schulung
+        vor. Oder anderer Text, der beschreibt, was eigentlich in dem Video
+        passiert.
+      </p>
+    </div>
   </div>
 </div>
