feat(ersten-modul): Add ersten-modul block and style

--- a/src/index.liquid
+++ b/src/index.liquid
@@ -25,13 +25,7 @@ layout: /layouts/base.liquid
   {% include 'partials/service-design.liquid' %}
 </main>
 
-<section>
-  <h2>Gleich loslegen mit dem ersten Modul</h2>
-  <a href="/module/service-design-und-nutzerorientierung"
-    >Service Design und Nutzerorientierung</a
-  >
-  <a href="/module">Alle Module</a>
-</section>
+{% include 'partials/ersten_modul.liquid' %}
 
 <aside>
   <h2>In der Praxis: Die Pilot-Schulung 2021</h2>
