feat(footer): Add footer with style

--- a/src/_includes/partials/header.liquid
+++ b/src/_includes/partials/header.liquid
@@ -30,7 +30,7 @@
           class="opacity-100 transition-opacity hover:opacity-80"
           title="Logo vom Projekt Citylab Berlin, der Technologiestiftung Berlin"
         >
-          {% include 'partials/citylab_logo.liquid' %}
+          {% include 'partials/citylab_logo_monochrome.liquid' %}
         </a>
       </div>
     </nav>
