--- a/src/_includes/layouts/module.liquid
+++ b/src/_includes/layouts/module.liquid
@@ -2,11 +2,7 @@
 layout: layouts/base.liquid
 ---
 
-<section>
-  <a href="/module">← Alle Module</a>
-  <h1>{{ title }}</h1>
-  <img src="{{ hero_image_url }}" alt="{{ hero_image_alt }}">
-</section>
+{% include 'partials/module_hero.liquid' %}
 
 <main>
   {{ content }}
@@ -14,24 +10,24 @@ layout: layouts/base.liquid
 
 <section>
   <h2>Beispiel</h2>
-  <img src="{{ example_image_url }}" alt="{{ example_image_alt }}">
+  <img src="{{ example_image_url }}" alt="{{ example_image_alt }}" />
   <p>{{ example }}</p>
 </section>
 
 <section>
   {% for method in methods %}
-    <div class="grid gap-4 grid-cols-12">
-      <div class="col-span-5">
-        <h2>{{ method.title }}</h2>
-        {% if abstract %}
-          <p>{{ method.abstract }}</p>
-        {% endif %}
-        <a href="{{ method.doc_path }}">Arbeitsblatt downloaden</a>
-      </div>
-      <p class="col-span-7">
-        {{ method.description }}
-      </p>
+  <div class="grid gap-4 grid-cols-12">
+    <div class="col-span-5">
+      <h2>{{ method.title }}</h2>
+      {% if abstract %}
+      <p>{{ method.abstract }}</p>
+      {% endif %}
+      <a href="{{ method.doc_path }}">Arbeitsblatt downloaden</a>
     </div>
+    <p class="col-span-7">
+      {{ method.description }}
+    </p>
+  </div>
   {% endfor %}
 </section>
 
@@ -39,9 +35,9 @@ layout: layouts/base.liquid
   <h2>Weiterführende Links</h2>
   <ul>
     {% for link in further_reading %}
-      <li>
-        <a href="{{ link.url }}">{{ link.title }} | {{ link.description }}</a>
-      </li>
+    <li>
+      <a href="{{ link.url }}">{{ link.title }} | {{ link.description }}</a>
+    </li>
     {% endfor %}
   </ul>
 </aside>
