feat(example): Example block with styles

--- a/src/_includes/layouts/module.liquid
+++ b/src/_includes/layouts/module.liquid
@@ -8,11 +8,7 @@ layout: layouts/base.liquid
   {{ content }}
 </main>
 
-<section>
-  <h2>Beispiel</h2>
-  <img src="{{ example_image_url }}" alt="{{ example_image_alt }}" />
-  <p>{{ example }}</p>
-</section>
+{% include 'partials/example.liquid' %}
 
 <section>
   {% for method in methods %}
