style(In der Praxis): prevent text from getting too long on big screens

--- a/src/_includes/partials/in_practice.liquid
+++ b/src/_includes/partials/in_practice.liquid
@@ -2,8 +2,8 @@
   <img src="/assets/images/schulung.webp" alt="Viele Menschen stehen um einen Tisch herum" class="col-span-1 md:col-span-5 w-full max-w-full">
   <div class="col-span-1 md:col-span-7 order-first md:order-none">
     {% include 'partials/heading.liquid' content: 'In der Praxis: Die
-    Pilot-Schulung 2021' class: 'pb-3 sm:pb-5' %}
-    <p>
+    Pilot-Schulung 2021' class: 'pb-3 sm:pb-5 max-w-prose' %}
+    <p class="max-w-prose">
       Die Weiterbildung xxx ist ein vom CityLab durchgeführtes Pilotprojekt. 16
       Mitarbeiter:innen der Berliner Senats- und Bezirksverwaltung haben an
       realen Verwaltungsprozessen die Prinzipien und Werkzeuge der
