--- a/src/_includes/layouts/module.liquid
+++ b/src/_includes/layouts/module.liquid
@@ -8,24 +8,8 @@ layout: layouts/base.liquid
   {{ content }}
 </main>
 
-{% include 'partials/example.liquid' %}
-
-<section>
-  {% for method in methods %}
-  <div class="grid gap-4 grid-cols-12">
-    <div class="col-span-5">
-      <h2>{{ method.title }}</h2>
-      {% if abstract %}
-      <p>{{ method.abstract }}</p>
-      {% endif %}
-      <a href="{{ method.doc_path }}">Arbeitsblatt downloaden</a>
-    </div>
-    <p class="col-span-7">
-      {{ method.description }}
-    </p>
-  </div>
-  {% endfor %}
-</section>
+{% include 'partials/example.liquid' %} {% include
+'partials/customer_journey.liquid' %}
 
 <aside>
   <h2>Weiterführende Links</h2>
