--- a/src/_includes/partials/example.liquid
+++ b/src/_includes/partials/example.liquid
@@ -11,5 +11,5 @@
 </div>
 {% endcapture %} {% include 'partials/angle_block.liquid' content: example
 class: 'container my-8 sm:my-12 md:my-16 p-4 py-8 sm:p-8 md:p-12 grid
-grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[auto,1fr] gap-8 sm:gap-12
+grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-8 sm:gap-12
 md:gap-16 items-center' %}
