add hypotheses and intro text part in modules

--- a/src/_includes/layouts/module.liquid
+++ b/src/_includes/layouts/module.liquid
@@ -4,9 +4,9 @@ layout: layouts/base.liquid
 
 {% include 'partials/module_hero.liquid' %}
 
-<main>
-  {{ content }}
-</main>
+{% include 'partials/module_intro_hypotheses.liquid' %}
+
+{% include 'partials/module_intro_text.liquid' %}
 
 {% include 'partials/example.liquid' %}
 
