--- a/src/_includes/layouts/module.liquid
+++ b/src/_includes/layouts/module.liquid
@@ -2,22 +2,8 @@
 layout: layouts/base.liquid
 ---
 
-{% include 'partials/module_hero.liquid' %}
-
-{% include 'partials/module_intro_hypotheses.liquid' %}
-
-{% include 'partials/module_intro_text.liquid' %}
-
-{% include 'partials/example.liquid' %} {% include
-'partials/customer_journey.liquid' %}
-
-<aside>
-  <h2>Weiterführende Links</h2>
-  <ul>
-    {% for link in further_reading %}
-    <li>
-      <a href="{{ link.url }}">{{ link.title }} | {{ link.description }}</a>
-    </li>
-    {% endfor %}
-  </ul>
-</aside>
+{% include 'partials/module_hero.liquid' %} {% include
+'partials/module_intro_hypotheses.liquid' %} {% include
+'partials/module_intro_text.liquid' %} {% include 'partials/example.liquid' %}
+{% include 'partials/customer_journey.liquid' %} {% include
+'partials/links_list.liquid' %}
