--- a/src/_includes/partials/module_intro_hypotheses.liquid
+++ b/src/_includes/partials/module_intro_hypotheses.liquid
@@ -1,7 +1,7 @@
-<div class="container sm:px-4 py-2 sm:py-8 md:py-16">
+<div class="container px-4 py-2 sm:py-6 md:py-6">
     <ul>      
         {% for link in hypotheses %}
-            <li class="py-2"> 
+            <li class="py-2 w-3/5 md:w-2/5 xl:w-2/5"> 
                     <svg class="flex mr-1" xmlns="http://www.w3.org/2000/svg" width="12" height="18" viewBox="0 0 12 18"><polygon fill="#F64C72" points="3.962 25 0 22.606 .075 11.906 8.162 7 12 9.327 11.984 20.096" transform="translate(0 -7)"/></svg>     
                 <a class="text-magenta-500">{{ link.text }}</a>
           
