--- a/src/_includes/partials/links_list.liquid
+++ b/src/_includes/partials/links_list.liquid
@@ -5,7 +5,7 @@
     {% for link in further_reading %}
     <li class="group">
       <a
-        class="group-odd:bg-blue-50 group-odd:bg-opacity-50 p-4 pr-16 sm:p-6 md:p-8 sm:text-lg md:text-xl grid grid-cols-1 sm:grid-cols-[2fr,3fr,auto] gap-2 transition group-hover:text-magenta-500 relative"
+        class="group-odd:bg-blue-50 group-odd:bg-opacity-50 p-4 pr-16 sm:p-6 md:p-8 sm:text-lg md:text-xl grid grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-2 sm:gap-8 transition group-hover:text-magenta-500 relative"
         href="{{ link.url }}"
       >
         <span>{{ link.title }}</span>
@@ -13,7 +13,7 @@
           link.description
         }}</span>
         {% include 'partials/arrow_icon.liquid' class: '-rotate-90 absolute
-        top-6 right-6 scale-75 sm:scale-100 sm:static' %}
+        top-6 right-6 sm:top-8 sm:right-8 scale-75 sm:scale-100' %}
       </a>
     </li>
     {% endfor %}
