refactor(module_page): Improve small styling aspects

--- a/src/_includes/partials/support_cta.liquid
+++ b/src/_includes/partials/support_cta.liquid
@@ -39,14 +39,14 @@
     <div
       class="text-lg md:text-xl gap-8 flex flex-col items-start pt-6 leading-tight sm:leading-normal"
     >
-      <p class="max-w-[70%] sm:max-w-md">
+      <p class="max-w-[70%] sm:max-w-md sm:text-lg xl:text-xl">
         Zusätzlich zu den hier bereitgestellten Materialien bietet das CityLAB
         Berlin die ServiceAgent:innen-Schulungen für öffentlich Verwaltungen in
         Berlin an.
       </p>
       <a
         href="mailto:schulung@citylab-berlin.org"
-        class="px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg lg:text-xl text-center transition-colors hover:text-magenta-500"
+        class="px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg xl:text-xl text-center transition-colors hover:text-magenta-500"
         >schulung@citylab-berlin.org</a
       >
     </div>
