--- a/src/_includes/partials/customer_journey.liquid
+++ b/src/_includes/partials/customer_journey.liquid
@@ -6,15 +6,15 @@
     <div>
       {% include 'partials/heading.liquid' content: method.title class:
       'text-white font-bold mb-1' %} {% if abstract %}
-      <p class="mb-5">{{ method.abstract }}</p>
+      <p class="mb-5 sm:text-lg xl:text-xl">{{ method.abstract }}</p>
       {% endif %}
       <a
         href="{{ method.doc_path }}"
-        class="inline-block px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg lg:text-xl text-center transition-colors hover:text-magenta-500"
+        class="inline-block px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg xl:text-xl text-center transition-colors hover:text-magenta-500"
         >Arbeitsblatt downloaden</a
       >
     </div>
-    <p>
+    <p class="sm:text-lg xl:text-xl">
       {{ method.description }}
     </p>
   </div>
