--- a/src/_includes/partials/module_hero.liquid
+++ b/src/_includes/partials/module_hero.liquid
@@ -5,7 +5,10 @@
     class="container px-4 grid grid-cols-[2fr,1fr] md:grid-cols-[1fr,auto] gap-4 sm:gap-6 md:gap-8"
   >
     <aside class="grid grid-cols-1 grid-rows-[auto,1fr]">
-      <a href="/module">← Alle Module</a>
+      <a href="/module" class="sm:text-lg xl:text-xl group" Alle Module
+        >←
+        <span class="opacity-70 group-hover:opacity-100">Alle Module</span></a
+      >
       <div class="flex flex-col justify-center gap-2 sml:gap-3 md:gap-4 py-4">
         <span
           class="text-5xl md:text-7xl -mt-4 text-magenta-500 leading-10 font-semibold mb-2 md:mb-0"
