--- a/src/_includes/partials/module_intro_text.liquid
+++ b/src/_includes/partials/module_intro_text.liquid
@@ -1,7 +1,7 @@
 <div class="container px-4 py-2 sm:py-8 md:py-8">
-      <div
-        class="lg:grid lg:grid-cols-[auto,auto] gap-4 sm:gap-6 md:gap-8"
-      >
-        {{content}}
-      </div>
+  <div
+    class="lg:grid lg:grid-cols-2 gap-4 sm:gap-8 md:gap-16 sm:text-lg xl:text-xl"
+  >
+    {{ content }}
   </div>
+</div>
