style(SAMS-34): fix line-height

--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -18,9 +18,9 @@
       </svg>
     </div>
     <div class="grid grid-rows-[auto_auto]">
-      <h2 class="text-xl md:text-lg xl:text-2xl md:leading-tight text-blue-500" id="{{ title }}">
+      <h2 class="text-xl md:text-lg xl:text-2xl md:leading-tight lg:leading-normal text-blue-500" id="{{ title }}">
         <span
-          class="text-[40px] md:text-[44px] xl:text-[64px] md:leading-3 font-bold text-magenta-500"
+          class="text-[40px] md:text-[44px] xl:text-[64px] md:leading-3 lg:leading-none font-bold text-magenta-500"
         >
           {% if number < 10 %}0{% endif %}{{ number }}</span
         ><br />
