style(SAMS-34): fix padding

--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -1,7 +1,7 @@
 <a
   href="{{ href }}"
   aria-labelledby="{{ title }}"
-  class="grid grid-cols-[1fr_auto] md:grid-cols-[180px_1fr] lg:grid-cols-[224px_1fr] gap-0.5 pl-5 pr-0 py-4 bg-blue-50 md:bg-transparent bg-opacity-50"
+  class="grid grid-cols-[1fr_auto] md:grid-cols-[180px_1fr] lg:grid-cols-[224px_1fr] gap-0.5 pl-5 md:pl-0 pr-0 py-4 bg-blue-50 md:bg-transparent bg-opacity-50"
 >
   <div
     class="md:bg-blue-50 md:bg-opacity-50 md:px-4 md:py-4 md:h-[204px] lg:h-[254px] md:relative"
