refactor(heading): only apply color if no existing classes are applied

--- a/src/_includes/partials/ersten_modul.liquid
+++ b/src/_includes/partials/ersten_modul.liquid
@@ -1,6 +1,6 @@
 <section class="container px-4 py-16 md:py-24">
   {% include 'partials/heading.liquid' content: 'Gleich loslegen mit dem ersten
-  Modul' class: 'pr-[28%] md:pr-0' %}
+  Modul' class: 'pr-[28%] md:pr-0 text-magenta-500' %}
   <a
     href="/module/service-design-und-nutzerorientierung/"
     class="flex gap-2 flex-col md:grid md:grid-cols-[auto,1fr,7fr,2fr] md:gap-8 bg-blue-50 bg-opacity-50 pl-8 pr-[28%] md:pr-0 pt-8 md:pt-5 pb-6 my-6 md:my-10 md:items-center relative"
