--- a/src/_includes/partials/example.liquid
+++ b/src/_includes/partials/example.liquid
@@ -6,7 +6,7 @@
 />
 <div class="prose text-blue-500 leading-snug sm:text-lg xl:text-xl">
   {% include 'partials/heading.liquid' content: 'Beispiel' class: 'mb-3 sm:mb-4
-  md:mb-5 font-normal' %}
+  md:mb-5 font-normal text-magenta-500' %}
   <p>{{ example }}</p>
 </div>
 {% endcapture %} {% include 'partials/angle_block.liquid' content: example
