--- a/src/_includes/partials/heading.liquid
+++ b/src/_includes/partials/heading.liquid
@@ -1,9 +1,11 @@
 <h2
   class="
-    text-xl sm:text-2xl md:text-3xl text-magenta-500
     {% if class %}
       {{ class }}
+    {% else %}
+      text-magenta-500
     {% endif %}
+    text-xl sm:text-2xl md:text-3xl
   "
 >
   {{ content }}
