--- a/src/_includes/partials/introduction.liquid
+++ b/src/_includes/partials/introduction.liquid
@@ -3,7 +3,7 @@
 >
   <div class="md:col-span-5 lg:col-span-4">
     {% include 'partials/heading.liquid' content: 'Einführung' class: 'pb-3
-    sm:pb-5' %}
+    sm:pb-5 text-magenta-500' %}
     <p>
       Mitarbeiter:innen der Verwaltung sind heute oft ausführendes Organ des
       Innovationsbestrebens und -drucks der öffentlichen Hand: Prozesse werden
