style(SAMS-34): create offset for modules grid

--- a/src/modules/index.liquid
+++ b/src/modules/index.liquid
@@ -7,9 +7,9 @@ layout: layouts/base.liquid
 
 <h1>{{ title }}</h1>
 
-<ul class="container px-4 grid grid-cols-1 gap-8">
+<ul class="container px-4 grid grid-cols-1 lg:grid-cols-2 gap-8 md:gap-0 lg:gap-8">
   {% for module in collections.module %}
-  <li>
+  <li class="even:translate-y-0 lg:even:translate-y-40">
     {% include 'partials/module_card.liquid' href: module.url title:
     module.data.title abstract: module.data.abstract number: forloop.index
     image_url: module.data.hero_image_url image_alt: module.data.hero_image_alt %}
