--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -1,10 +1,10 @@
 <a
   href="{{ href }}"
   aria-labelledby="{{ title }}"
-  class="grid grid-cols-[1fr_auto] md:grid-cols-[180px_1fr] lg:grid-cols-[224px_1fr] gap-0.5 pl-5 md:pl-0 pr-0 py-4 bg-blue-50 md:bg-transparent bg-opacity-50"
+  class="grid grid-cols-[1fr_auto] md:grid-cols-[180px_1fr] lg:grid-cols-[224px_1fr] gap-0.5 pl-5 md:pl-0 pr-0 py-4 bg-blue-50 md:bg-transparent bg-opacity-50 group focus:ring-0"
 >
   <div
-    class="md:bg-blue-50 md:bg-opacity-50 md:px-4 md:py-4 md:h-[204px] lg:h-[254px] md:relative"
+    class="md:bg-blue-50 md:bg-opacity-50 md:px-4 md:py-4 md:h-[204px] lg:h-[254px] md:relative group-focus:ring group-focus:ring-magenta-500 group-focus:ring-offset-0"
   >
     <div class="hidden md:block md:absolute top-0 right-0" aria-hidden="true">
       <svg
@@ -18,7 +18,10 @@
       </svg>
     </div>
     <div class="grid grid-rows-[auto_auto]">
-      <h2 class="text-xl md:text-lg xl:text-2xl md:leading-tight lg:leading-normal text-blue-500" id="{{ title }}">
+      <h2
+        class="text-xl md:text-lg xl:text-2xl md:leading-tight lg:leading-normal text-blue-500"
+        id="{{ title }}"
+      >
         <span
           class="text-[40px] md:text-[44px] xl:text-[64px] md:leading-3 lg:leading-none font-bold text-magenta-500"
         >
@@ -26,7 +29,9 @@
         ><br />
         {{ title }}
       </h2>
-      <p class="mt-1 text-blue-300 text-base lg:text-sm xl:text-base">{{ abstract }}</p>
+      <p class="mt-1 text-blue-300 text-base lg:text-sm xl:text-base">
+        {{ abstract }}
+      </p>
     </div>
   </div>
   <img
