refactor(angle_block): Make sure that angle block is a div

--- a/src/_includes/partials/angle_block.liquid
+++ b/src/_includes/partials/angle_block.liquid
@@ -1,4 +1,4 @@
-<li
+<div
   class="
   bg-blue-50 bg-opacity-50 p-4 sm:p-6 md:p-8 relative
     {% if class %}
@@ -18,4 +18,4 @@
     </svg>
   </div>
   {{ content }}
-</li>
+</div>
