refactor(footer): Add titles to image links

--- a/src/_includes/partials/footer.liquid
+++ b/src/_includes/partials/footer.liquid
@@ -5,6 +5,7 @@
       <a
         href="https://citylab-berlin.org"
         class="opacity-100 transition-opacity hover:opacity-80"
+        title="Logo vom Projekt CityLab Berlin"
       >
         {% include 'partials/citylab_logo_color.liquid' %}
       </a>
@@ -16,6 +17,7 @@
             class="opacity-100 transition-opacity hover:opacity-80"
             target="_blank"
             rel="noopener noreferrer"
+            title="Logo der Technologiestiftung Berlin"
             >{% include 'partials/tsb_logo_color.liquid' %}</a
           >
         </li>
@@ -26,6 +28,7 @@
             class="opacity-100 transition-opacity hover:opacity-80"
             target="_blank"
             rel="noopener noreferrer"
+            title="Logo von Berlin. Die Regierende Bürgermeisterin von Berlin - Senatskanzlei"
             >{% include 'partials/berlin_logo_color.liquid' %}</a
           >
         </li>
