--- a/src/_includes/layouts/module.liquid
+++ b/src/_includes/layouts/module.liquid
@@ -5,5 +5,5 @@ layout: layouts/base.liquid
 {% include 'partials/module_hero.liquid' %} {% include
 'partials/module_intro_hypotheses.liquid' %} {% include
 'partials/module_intro_text.liquid' %} {% include 'partials/example.liquid' %}
-{% include 'partials/customer_journey.liquid' %} {% include
-'partials/links_list.liquid' %}
+{% include 'partials/methods.liquid' %} {% include 'partials/links_list.liquid'
+%}
