--- a/src/_includes/partials/support_cta.liquid
+++ b/src/_includes/partials/support_cta.liquid
@@ -1,8 +1,10 @@
 <section
-  class="bg-magenta-500 text-white pb-16 sm:pb-8 py-8 sm:py-10 md:py-12 mt-12 sm:mt-16 md:mt-24 relative"
+  class="bg-magenta-500 text-white my-8 sm:my-12 md:my-16 flex flex-col relative"
 >
-  <div class="container px-4 grid grid-cols-1 sm:grid-cols-2">
-    <div class="flex gap-8 sm:justify-center">
+  <div
+    class="container p-4 py-8 sm:p-8 md:p-12 grid grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-8 sm:gap-12 md:gap-16"
+  >
+    <div class="flex gap-8 flew-wrap">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 142 200"
