--- a/src/_includes/partials/module_intro_hypotheses.liquid
+++ b/src/_includes/partials/module_intro_hypotheses.liquid
@@ -1,3 +1,4 @@
+{% if hypotheses %}
 <div
   class="container px-4 py-2 sm:py-6 md:py-6 grid grid-cols-2 gap-4 sm:gap-8 md:gap-16"
 >
@@ -22,3 +23,4 @@
     {% endfor %}
   </ul>
 </div>
+{% endif %}
