feat(footer): Add back to top button

--- a/src/_includes/partials/support_cta.liquid
+++ b/src/_includes/partials/support_cta.liquid
@@ -49,6 +49,12 @@
         class="px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg lg:text-xl text-center transition-colors hover:text-magenta-500"
         >schulung@citylab-berlin.org</a
       >
+      <button
+        id="back-to-top-link"
+        class="absolute -top-4 right-4 -translate-y-full transition hover:bg-blue-500 bg-magenta-500 text-white w-12 h-12 flex items-center justify-center"
+      >
+        {% include 'partials/arrow_icon.liquid' class: '-rotate-180' %}
+      </button>
     </div>
   </div>
 </section>
