--- a/src/_includes/partials/footer.liquid
+++ b/src/_includes/partials/footer.liquid
@@ -1,4 +1,4 @@
-<footer>
+<footer class="relative mt-16">
   {% include 'partials/support_cta.liquid' %}
   <section class="container px-4 py-8">
     <nav class="flex flex-col sm:flex-row sm:items-center gap-8 sm:gap-16 sm:justify-between">
@@ -51,3 +51,4 @@
     </section>
   </div>
 </footer>
+<script src="/assets/js/common.js"></script>
