--- a/src/modules/index.liquid
+++ b/src/modules/index.liquid
@@ -30,7 +30,7 @@ layout: layouts/base.liquid
 </section>
 
 <ul
-  class="container pb-24 px-4 grid grid-cols-1 lg:grid-cols-2 gap-8 md:gap-0 lg:gap-8 -translate-y-12 md:-translate-y-20"
+  class="container pb-24 px-4 grid grid-cols-1 lg:grid-cols-2 gap-8 md:gap-0 lg:gap-8 xl:gap-16 -translate-y-12 md:-translate-y-20"
 >
   {% for module in collections.module %}
   <li class="even:translate-y-0 lg:even:translate-y-40">
