--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -1,6 +1,6 @@
 <a
   href="{{ href }}"
-  aria-labelledby="{{ title }}"
+  aria-label="{{ title }}"
   class="grid grid-cols-[1fr_auto] md:grid-cols-[180px_1fr] lg:grid-cols-[224px_1fr] gap-0 pl-5 md:pl-0 pr-0 py-4 bg-blue-25 md:bg-transparent group focus:ring-0"
 >
   <div
@@ -20,7 +20,6 @@
     <div class="grid grid-rows-[auto_auto]">
       <h2
         class="text-xl md:text-lg xl:text-2xl md:leading-tight lg:leading-normal text-blue-500"
-        id="{{ title }}"
       >
         <span
           class="text-[40px] md:text-[44px] xl:text-[64px] md:leading-3 lg:leading-none font-bold text-magenta-500"
