style(SAMS-34): increase line-height slightly in md screen

--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -19,7 +19,7 @@
     </div>
     <div class="grid grid-rows-[auto_auto]">
       <h2
-        class="text-xl md:text-lg xl:text-2xl md:leading-tight lg:leading-normal text-blue-500"
+        class="text-xl md:text-lg xl:text-2xl md:leading-relaxed lg:leading-normal text-blue-500"
       >
         <span
           class="text-[40px] md:text-[44px] xl:text-[64px] md:leading-3 lg:leading-none font-bold text-magenta-500"
