--- a/src/_includes/partials/module_intro_text.liquid
+++ b/src/_includes/partials/module_intro_text.liquid
@@ -1,6 +1,6 @@
 <div class="container px-4 py-2 sm:py-8 md:py-8">
   <div
-    class="lg:grid lg:grid-cols-2 gap-4 sm:gap-8 md:gap-16 sm:text-lg xl:text-xl"
+    class="lg:columns-2 gap-4 sm:gap-8 md:gap-16 sm:text-lg xl:text-xl prose max-w-none text-blue-500"
   >
     {{ content }}
   </div>
