refactor: Change all links to have aria-label instead of title

--- a/src/_includes/partials/header.liquid
+++ b/src/_includes/partials/header.liquid
@@ -4,7 +4,7 @@
   <section class="px-4 container flex justify-between items-center">
     <a
       href="/"
-      title="Hauptseite der Webseite"
+      aria-label="Hauptseite der Webseite"
       class="opacity-100 transition-opacity hover:opacity-80 origin-left transform scale-90 sm:scale-100"
     >
       {% include 'partials/logo.liquid' %}
@@ -15,7 +15,7 @@
           <a
             href="/module"
             class="text-blue-100 font-bold md:text-lg opacity-100 transition-opacity hover:opacity-80"
-            title="Übersichtseite aller 8 Module zur agilen Behördenarbeit"
+            aria-label="Übersichtseite aller 8 Module zur agilen Behördenarbeit"
           >
             <span class="sm:inline hidden">→</span> Module
           </a>
@@ -28,7 +28,7 @@
         <a
           href="https://citylab-berlin.org"
           class="opacity-100 transition-opacity hover:opacity-80"
-          title="Logo vom Projekt Citylab Berlin, der Technologiestiftung Berlin"
+          aria-label="Logo vom Projekt Citylab Berlin, der Technologiestiftung Berlin"
         >
           {% include 'partials/citylab_logo_monochrome.liquid' %}
         </a>
