--- a/src/_includes/partials/ersten_modul.liquid
+++ b/src/_includes/partials/ersten_modul.liquid
@@ -4,7 +4,7 @@
   <a
     href="/module/service-design-und-nutzerorientierung/"
     class="flex gap-2 flex-col md:grid md:grid-cols-[auto,1fr,7fr,2fr] md:gap-8 bg-blue-50 bg-opacity-50 pl-8 pr-[28%] md:pr-0 pt-8 md:pt-5 pb-6 my-6 md:my-10 md:items-center relative"
-    title="Zum ersten Modul Service Design und Nutzerorientierung navigieren"
+    aria-label="Zum ersten Modul Service Design und Nutzerorientierung navigieren"
   >
     <span
       class="text-5xl md:text-7xl -mt-4 text-magenta-500 leading-10 font-semibold mb-2 md:mb-0"
