--- a/src/_includes/partials/footer.liquid
+++ b/src/_includes/partials/footer.liquid
@@ -5,7 +5,7 @@
       <a
         href="https://citylab-berlin.org"
         class="opacity-100 transition-opacity hover:opacity-80"
-        title="Logo vom Projekt CityLab Berlin"
+        aria-label="Logo vom Projekt CityLab Berlin"
       >
         {% include 'partials/citylab_logo_color.liquid' %}
       </a>
@@ -17,7 +17,7 @@
             class="opacity-100 transition-opacity hover:opacity-80"
             target="_blank"
             rel="noopener noreferrer"
-            title="Logo der Technologiestiftung Berlin"
+            aria-label="Logo der Technologiestiftung Berlin"
             >{% include 'partials/tsb_logo_color.liquid' %}</a
           >
         </li>
@@ -28,7 +28,7 @@
             class="opacity-100 transition-opacity hover:opacity-80"
             target="_blank"
             rel="noopener noreferrer"
-            title="Logo von Berlin. Die Regierende Bürgermeisterin von Berlin - Senatskanzlei"
+            aria-label="Logo von Berlin. Die Regierende Bürgermeisterin von Berlin - Senatskanzlei"
             >{% include 'partials/berlin_logo_color.liquid' %}</a
           >
         </li>
