--- a/src/_includes/partials/module_hero.liquid
+++ b/src/_includes/partials/module_hero.liquid
@@ -13,7 +13,7 @@
         <span
           class="text-5xl md:text-7xl -mt-4 text-magenta-500 leading-10 font-semibold mb-2 md:mb-0"
         >
-          {{ module_number }}
+          {{ page.fileSlug }}
         </span>
         <h1
           class="text-2xl sm:text-3xl md:text-4xl font-bold leading-tight -mt-1"
