refactor: Set colors for default prose

--- a/src/_includes/partials/example.liquid
+++ b/src/_includes/partials/example.liquid
@@ -4,7 +4,7 @@
   alt="{{ example_image_alt }}"
   class="w-full"
 />
-<div class="prose text-blue-500 leading-snug sm:text-lg xl:text-xl">
+<div class="prose leading-snug sm:text-lg xl:text-xl">
   {% include 'partials/heading.liquid' content: 'Beispiel' class: 'mb-3 sm:mb-4
   md:mb-5 font-normal text-magenta-500' %}
   <p>{{ example }}</p>
