--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -52,7 +52,7 @@
       </span>
     </summary>
     <div class="bg-blue-50 bg-opacity-50 p-8">
-      <div class="prose text-blue-500">
+      <div class="prose">
         <p>
           xxx setzt bei diesem Dilemma an und führt Führungskräfte wie auch
           Verwaltungs&shy;mit&shy;arbeiter&shy;:innen in die Methode
