feat(footer): add subtle border-top

--- a/src/_includes/partials/footer.liquid
+++ b/src/_includes/partials/footer.liquid
@@ -1,5 +1,4 @@
-<footer>
-  {% include 'partials/support_cta.liquid' %}
+<footer class="border-t border-blue-50">
   <section class="container px-4 py-8">
     <nav class="flex flex-col sm:flex-row sm:items-center gap-8 sm:gap-16 sm:justify-between">
       <a
