refactor: only show support CTA on content pages
Not on 404

--- a/src/modules/index.liquid
+++ b/src/modules/index.liquid
@@ -2,7 +2,7 @@
 title: Die 8 Module
 permalink: /module/ # <- for German paths
 eleventyExcludeFromCollections: true
-layout: layouts/base.liquid
+layout: layouts/content.liquid
 ---
 
 <section class="bg-blue-500 pt-14 pb-48 px-4 md:px-8">
