--- a/src/_includes/layouts/base.liquid
+++ b/src/_includes/layouts/base.liquid
@@ -17,7 +17,7 @@
 
   </head>
 
-  <body>
+  <body class="min-h-screen flex flex-col justify-between">
     {% include "partials/header.liquid" %}
     {{ content }}
     {% include "partials/footer.liquid" %}
