--- a/src/_includes/partials/support_cta.liquid
+++ b/src/_includes/partials/support_cta.liquid
@@ -9,6 +9,8 @@
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 142 200"
         class="w-[88px] h-[125px] md:w-[142px] md:h-[200px] absolute sm:static top-8 right-8"
+        role="img"
+        aria-label="Abstrakte Illustration mit Fragezeichen in der Mitte"
       >
         <g fill="none" transform="translate(1.876 2.116)">
           <path
@@ -33,10 +35,10 @@
           />
         </g>
       </svg>
-      <span class="text-xl sm:text-2xl md:text-3xl mt-6">
+      <h3 class="text-xl sm:text-2xl md:text-3xl mt-6">
         Unter&shy;stützung <br />
         benötigt?
-      </span>
+      </h3>
     </div>
     <div
       class="text-lg md:text-xl gap-8 flex flex-col items-start pt-6 leading-tight sm:leading-normal"
@@ -48,8 +50,10 @@
       <a
         href="mailto:info@citylab-berlin.org"
         class="px-3 pt-1 pb-1 md:pb-2 bg-white text-blue-500 text-base md:text-lg lg:text-xl text-center transition-colors hover:text-magenta-500"
-        >info@citylab-berlin.org</a
+        aria-label="Kontakltieren Sie uns per E-Mail an info@citylab-berlin.org"
       >
+        info@citylab-berlin.org
+      </a>
       <button
         id="back-to-top-link"
         class="absolute -top-4 right-4 -translate-y-full transition hover:bg-blue-500 bg-magenta-500 text-white w-12 h-12 flex items-center justify-center"
