test(modules_overview): Add cypress tests to modules overview

--- a/src/_includes/partials/module_card.liquid
+++ b/src/_includes/partials/module_card.liquid
@@ -1,6 +1,6 @@
 <a
   href="{{ href }}"
-  aria-label="{{ title }}"
+  aria-label="Link zu den Modul {{ fileSlug }}: {{ title }}"
   class="grid grid-cols-[1fr_auto] md:grid-cols-[180px_1fr] lg:grid-cols-[224px_1fr] gap-0 pl-5 md:pl-0 pr-0 py-4 bg-blue-25 md:bg-transparent group focus:ring-0"
 >
   <div
