--- a/src/_includes/partials/module_section_description.liquid
+++ b/src/_includes/partials/module_section_description.liquid
@@ -1,4 +1,7 @@
-<li class="px-3 py-2 bg-white bg-opacity-5 text-sm md:text-base">
+<li
+  aria-label="Komponent des Moduls"
+  class="px-3 py-2 bg-white bg-opacity-5 text-sm md:text-base"
+>
   <b class="text-white">{{ title }}</b>
   <br />
   <span class="text-blue-200">{{ description }}</span>
