--- a/src/_includes/partials/links_list.liquid
+++ b/src/_includes/partials/links_list.liquid
@@ -7,6 +7,7 @@
       <a
         class="group-odd:bg-blue-50 group-odd:bg-opacity-50 p-4 pr-16 sm:p-6 md:p-8 sm:text-lg md:text-xl grid grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-2 sm:gap-8 transition group-hover:text-magenta-500 relative"
         href="{{ link.url }}"
+        aria-label="Link zu: {{ link.title }}"
       >
         <span>{{ link.title }}</span>
         <span class="opacity-60 transition-opacity group-hover:opacity-100">{{
