--- a/src/_includes/partials/module_hero.liquid
+++ b/src/_includes/partials/module_hero.liquid
@@ -12,6 +12,8 @@
       <div class="flex flex-col justify-center gap-2 sml:gap-3 md:gap-4 py-4">
         <span
           class="text-5xl md:text-7xl -mt-4 text-magenta-500 leading-10 font-semibold mb-2 md:mb-0"
+          role="heading"
+          aria-label="Modul Nummer: {{ page.fileSlug }}"
         >
           {{ page.fileSlug }}
         </span>
