feat(SAMS-42): Create social image (file in sketch) and apply to pages

--- a/src/modules/index.liquid
+++ b/src/modules/index.liquid
@@ -1,5 +1,8 @@
 ---
 title: Die 8 Module
+socialMediaImagePath: /assets/images/overview-social-image.webp
+socialMediaImageType: image/webp
+socialMediaImageAlt: Die 8 Module unterteilt unter die 4 Komponente “Hintergrung”, “Beispiel”, “Methoden” und “Weitere Links”
 permalink: /module/ # <- for German paths
 eleventyExcludeFromCollections: true
 layout: layouts/content.liquid
