Add https://i.ytimg.com to img-src in CSP

--- a/src/_includes/layouts/base.liquid
+++ b/src/_includes/layouts/base.liquid
@@ -4,7 +4,7 @@
     {% if env.isProduction %}
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'none'; connect-src 'self'; img-src 'self' https://piwik.technologiestiftung-berlin.de; script-src 'self' https://piwik.technologiestiftung-berlin.de; style-src 'self'; font-src 'self'; manifest-src 'self'; object-src 'none'; frame-src youtube.com www.youtube.com www.youtube-nocookie.com;"
+      content="default-src 'none'; connect-src 'self'; img-src 'self' https://piwik.technologiestiftung-berlin.de https://i.ytimg.com; script-src 'self' https://piwik.technologiestiftung-berlin.de; style-src 'self'; font-src 'self'; manifest-src 'self'; object-src 'none'; frame-src youtube.com www.youtube.com www.youtube-nocookie.com;"
     />
     {% endif %}
     <meta charset="UTF-8" />
