refactor(SAMS-47): Align everthing where possible for better layout structure

--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -1,6 +1,6 @@
 <section class="bg-blue-500 py-14 px-4 sm:px-8">
   <div
-    class="container flex flex-row-reverse md:grid gap-4 sm:gap-6 md:gap-10 md:grid-cols-2 items-start md:items-center"
+    class="container max-w-7xl flex flex-row-reverse md:grid gap-4 sm:gap-6 md:gap-10 md:grid-cols-3 items-start md:items-center"
   >
     <div class="flex justify-center w-20 sm:w-28 md:w-auto flex-shrink-0">
       <img
@@ -8,9 +8,9 @@
         alt="Placeholder TODO: change image"
       />
     </div>
-    <div>
+    <div class="md:col-span-2">
       <h1
-        class="text-white text-3xl leading-none md:text-4xl lg:text-[40px] font-bold"
+        class="text-white text-3xl leading-none md:text-4xl lg:text-[40px] font-bold max-w-xl"
         aria-label="In 8 Modulen zur agilen Behördenarbeit"
       >
         In <em class="text-magenta-500 not-italic">8 Modulen</em> zur agilen
@@ -19,7 +19,7 @@
       <h2 class="mt-2 text-blue-200 text-base md:text-lg xl:text-xl">
         So machen Sie Ihr Team fit für die Zukunft
       </h2>
-      <p class="mt-4 text-white text-base md:text-lg xl:text-xl">
+      <p class="mt-4 text-white text-base md:text-lg xl:text-xl max-w-xl">
         Digitale, agile und nutzer:innen-orientierte Prozesse sind wesentlich
         für den anstehenden Wandel in allen Bereichen des öffentlichen Lebens.
         Mit der Weiterbildung xxx geben wir auf diese Herausforderung eine
