--- a/src/_includes/partials/introduction.liquid
+++ b/src/_includes/partials/introduction.liquid
@@ -1,7 +1,7 @@
 <div
-  class="my-16 md:mt-32 md:mb-24 px-4 container grid grid-cols-1 md:grid-cols-12 gap-5 md:gap-8 lg:items-center"
+  class="my-16 md:mt-32 md:mb-24 px-4 container max-w-7xl grid grid-cols-1 md:grid-cols-12 gap-5 md:gap-8"
 >
-  <div class="md:col-span-5 lg:col-span-4">
+  <div class="md:col-span-4">
     {% include 'partials/heading.liquid' content: 'Einführung' class: 'pb-3
     sm:pb-5 text-magenta-500' %}
     <p>
@@ -16,9 +16,7 @@
       hier in einem konzentrierten Überblick vorgestellt.
     </p>
   </div>
-  <div
-    class="order-first md:order-last md:col-span-7 lg:col-span-6 lg:col-start-6"
-  >
+  <div class="order-first md:order-last md:col-span-8">
     <iframe
       class="aspect-video w-full"
       src="https://www.youtube-nocookie.com/embed/iqpsEzLdl_k"
