--- a/src/_includes/partials/links_list.liquid
+++ b/src/_includes/partials/links_list.liquid
@@ -1,4 +1,6 @@
-<section class="container my-8 sm:my-12 md:my-16 p-4 py-8 sm:p-8 md:p-12">
+<section
+  class="container max-w-7xl my-8 sm:my-12 md:my-16 p-4 py-8 sm:p-8 md:p-12"
+>
   {% include 'partials/heading.liquid' content: 'Weiterführende Links' class:
   'mb-3 sm:mb-4 md:mb-5 text-magenta-500' %}
   <ul class="flex flex-col">
