--- a/src/404.liquid
+++ b/src/404.liquid
@@ -4,7 +4,7 @@ layout: layouts/base.liquid
 permalink: /404.html
 ---
 
-<main class="container px-4 md:px-0">
+<main class="container max-w-7xl px-4 md:px-0">
   <h1 class="text-2xl md:text-3xl lg:text-4xl text-magenta-500 leading-none">
     {{ title }}
   </h1>
