--- a/src/_includes/partials/ersten_modul.liquid
+++ b/src/_includes/partials/ersten_modul.liquid
@@ -1,4 +1,4 @@
-<section class="container px-4 py-16 md:py-24">
+<section class="container max-w-7xl px-4 py-16 md:py-24">
   {% include 'partials/heading.liquid' content: 'Gleich loslegen mit dem ersten
   Modul' class: 'pr-[28%] md:pr-0 text-magenta-500' %}
   <a
