--- a/src/_includes/partials/footer.liquid
+++ b/src/_includes/partials/footer.liquid
@@ -1,5 +1,5 @@
 <footer class="relative border-t border-blue-50">
-  <section class="container px-4 py-8">
+  <section class="container max-w-7xl px-4 py-8">
     <nav class="flex flex-col sm:flex-row sm:items-center gap-8 sm:gap-16 sm:justify-between">
       <a
         href="https://citylab-berlin.org"
@@ -36,7 +36,7 @@
   </section>
   <section>
   <div class="bg-blue-50 bg-opacity-50">
-    <section class="container px-4 py-3 flex justify-between flex-wrap">
+    <section class="container max-w-7xl px-4 py-3 flex justify-between flex-wrap">
       <span class="flex gap-2">
         Lizenz (Inhalte):
         <a href="https://citylab-berlin.org" class="flex gap-2 items-center underline underline-offset-1">
