--- a/src/_includes/partials/in_practice.liquid
+++ b/src/_includes/partials/in_practice.liquid
@@ -1,12 +1,7 @@
 <aside
-  class="container py-8 px-8 bg-blue-50 bg-opacity-50 grid grid-cols-1 md:grid-cols-12 gap-8"
+  class="container max-w-7xl py-8 px-8 bg-blue-50 bg-opacity-50 grid grid-cols-1 md:grid-cols-12 gap-8 mt-4 sm:mt-8 md:mt-16"
 >
-  <img
-    src="/assets/images/schulung.webp"
-    alt="Viele Menschen stehen um einen Tisch herum"
-    class="col-span-1 md:col-span-5 w-full max-w-full"
-  />
-  <div class="col-span-1 md:col-span-7 order-first md:order-none">
+  <div class="col-span-1 md:col-span-4 order-first md:order-none">
     {% include 'partials/heading.liquid' content: 'In der Praxis: Die
     Pilot-Schulung 2021' class: 'pb-3 sm:pb-5 text-magenta-500 max-w-prose' %}
     <p class="max-w-prose">
@@ -16,6 +11,11 @@
       nutzerzentrierten Prozessgestaltung erlernt.
     </p>
   </div>
+  <img
+    src="/assets/images/schulung.webp"
+    alt="Viele Menschen stehen um einen Tisch herum"
+    class="col-span-1 md:col-span-8 w-full max-w-full h-96 object-cover"
+  />
   <div class="col-span-1 md:col-span-12">
     <h3 class="text-lg sm:text-xl md:text-2xl text-magenta-500">
       O-Töne unserer Teilnehmer:innen
