--- a/src/_includes/partials/methods.liquid
+++ b/src/_includes/partials/methods.liquid
@@ -1,7 +1,7 @@
 <section class="bg-magenta-500 text-white my-8 sm:my-12 md:my-16 flex flex-col">
   {% for method in methods %}
   <div
-    class="container p-4 py-8 sm:p-8 md:p-12 grid grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-8 sm:gap-12 md:gap-16"
+    class="container max-w-7xl p-4 py-8 sm:p-8 md:p-12 grid grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-8 sm:gap-12 md:gap-16"
   >
     <div>
       {% include 'partials/heading.liquid' content: method.title class:
