--- a/src/_includes/partials/moderne_verwaltung.liquid
+++ b/src/_includes/partials/moderne_verwaltung.liquid
@@ -1,4 +1,4 @@
-<div class="container px-4 py-6 sm:py-8 md:py-16">
+<div class="container max-w-7xl px-4 py-6 sm:py-8 md:py-16">
   {% include 'partials/heading.liquid' content: 'Herausforderungen für eine
   moderne Verwaltung' class: 'pb-3 sm:pb-5 md:pb-8 text-magenta-500' %}
   <ul
