--- a/src/_includes/partials/module_hero.liquid
+++ b/src/_includes/partials/module_hero.liquid
@@ -2,7 +2,7 @@
   class="bg-blue-500 py-6 sm:py-8 md:py-12 text-white mb-8 sm:mb-12 md:mb-16"
 >
   <div
-    class="container px-4 grid grid-cols-[2fr,1fr] md:grid-cols-[1fr,auto] gap-4 sm:gap-6 md:gap-8"
+    class="container max-w-7xl px-4 grid grid-cols-[2fr,1fr] md:grid-cols-[1fr,auto] gap-4 sm:gap-6 md:gap-8"
   >
     <aside class="grid grid-cols-1 grid-rows-[auto,1fr]">
       <a href="/module" class="sm:text-lg xl:text-xl group" Alle Module
