--- a/src/_includes/partials/support_cta.liquid
+++ b/src/_includes/partials/support_cta.liquid
@@ -2,7 +2,7 @@
   class="bg-magenta-500 text-white mt-8 sm:mt-12 md:mt-16 flex flex-col relative"
 >
   <div
-    class="container p-4 py-8 sm:p-8 md:p-12 grid grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-8 sm:gap-12 md:gap-16"
+    class="container max-w-7xl p-4 py-8 sm:p-8 md:p-12 grid grid-cols-1 md:grid-cols-[1fr,2fr] lg:grid-cols-[2fr,3fr,1fr] gap-8 sm:gap-12 md:gap-16"
   >
     <div class="flex gap-8 flew-wrap">
       <svg
