--- a/src/modules/index.liquid
+++ b/src/modules/index.liquid
@@ -6,7 +6,7 @@ layout: layouts/content.liquid
 ---
 
 <section class="bg-blue-500 pt-14 pb-48 px-4 md:px-8">
-  <div class="container">
+  <div class="container max-w-7xl">
     <h1 class="text-2xl sm:text-3xl md:text-4xl text-white font-bold">
       {{ title }}
     </h1>
@@ -30,7 +30,7 @@ layout: layouts/content.liquid
 </section>
 
 <ul
-  class="container pb-24 px-4 grid grid-cols-1 lg:grid-cols-2 gap-8 md:gap-0 lg:gap-8 xl:gap-16 -translate-y-12 md:-translate-y-20"
+  class="container max-w-7xl pb-24 px-4 grid grid-cols-1 lg:grid-cols-2 gap-8 md:gap-0 lg:gap-8 xl:gap-16 -translate-y-12 md:-translate-y-20"
 >
   {% for module in collections.module %}
   <li class="even:translate-y-0 lg:even:translate-y-40">
