chore: Add CSP to netlify.toml

--- a/src/_includes/partials/support_cta.liquid
+++ b/src/_includes/partials/support_cta.liquid
@@ -57,6 +57,7 @@
       <button
         id="back-to-top-link"
         class="absolute -top-4 right-4 -translate-y-full transition hover:bg-blue-500 bg-magenta-500 text-white w-12 h-12 flex items-center justify-center"
+        aria-label="Zurück zum Seitenanfang hochscrollen"
       >
         {% include 'partials/arrow_icon.liquid' class: '-rotate-180' %}
       </button>
