chore: Fix multiplw a11y issues and activate error in gh action

--- a/src/_includes/partials/example.liquid
+++ b/src/_includes/partials/example.liquid
@@ -2,6 +2,8 @@
 <img
   src="{{ example_image_url }}"
   alt="{{ example_image_alt }}"
+  width="{{ example_image_width }}"
+  height="{{ example_image_height }}"
   class="w-full"
 />
 <div class="prose leading-snug sm:text-lg xl:text-xl">
