--- a/src/_includes/layouts/base.liquid
+++ b/src/_includes/layouts/base.liquid
@@ -19,7 +19,7 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css" media="screen" />
   </head>
 
   <body class="min-h-screen flex flex-col justify-between">
