--- a/src/_includes/partials/home_hero.liquid
+++ b/src/_includes/partials/home_hero.liquid
@@ -4,8 +4,10 @@
   >
     <div class="flex justify-center w-20 sm:w-28 md:w-auto flex-shrink-0">
       <img
-        src="/assets/images/modules/01_hero.png"
+        src="/assets/images/hompage-hero.webp"
         alt="Placeholder TODO: change image"
+        width="410"
+        height="640"
       />
     </div>
     <div class="md:col-span-2">
