--- a/src/_includes/partials/module_hero.liquid
+++ b/src/_includes/partials/module_hero.liquid
@@ -9,25 +9,25 @@
         >←
         <span class="opacity-70 group-hover:opacity-100">Alle Module</span></a
       >
-      <div class="flex flex-col justify-center gap-2 sml:gap-3 md:gap-4 py-4">
+      <h1 class="flex flex-col justify-center gap-2 sml:gap-3 md:gap-4 py-4">
         <span
           class="text-5xl md:text-7xl -mt-4 text-magenta-500 leading-10 font-semibold mb-2 md:mb-0"
-          role="heading"
-          aria-label="Modul Nummer: {{ page.fileSlug }}"
         >
           {{ page.fileSlug }}
         </span>
-        <h1
+        <span
           class="text-2xl sm:text-3xl md:text-4xl font-bold leading-tight -mt-1"
         >
           {{ title }}
-        </h1>
-      </div>
+        </span>
+      </h1>
     </aside>
     <img
       src="{{ hero_image_url }}"
       alt="{{ hero_image_alt }}"
       class="translate-y-12 {% if hypotheses %} sm:translate-y-1/3 {% else %} sm:translate-y-24 {% endif %} -mt-[50%]"
+      width="346 "
+      height="584"
     />
   </div>
 </section>
