--- a/src/_includes/partials/service-design.liquid
+++ b/src/_includes/partials/service-design.liquid
@@ -13,9 +13,11 @@
     <div class="lg:grid lg:grid-cols-3 gap-4 md:gap-8 lg:gap-12 clear-left">
       <div class="flex items-center justify-center">
         <img
+          width="236"
+          height="371"
           src="/assets/images/service-design.webp"
           alt="Abstract illustration of a woman interacting with a digital screen with other indiviuals"
-          class="object-contain max-h-full max-w-full pr-8 pb-8 float-left lg:float-none absolute sm:static top-8 right-4 origin-top-right scale-[0.2] sm:scale-100"
+          class="object-contain box-content max-h-full max-w-full pr-8 pb-8 float-left lg:float-none absolute sm:static top-8 right-4 origin-top-right scale-[0.2] sm:scale-100"
         />
       </div>
       <p class="mb-2 sm:mb-3 md:mb-4">
